Fixed editor font-weight, so the styling of the text was visible

--- a/src/view.css
+++ b/src/view.css
@@ -17,4 +17,5 @@
 .wp-block-firstgutyblocks-hero-image .content {
     position: relative;
     z-index: 1;
+    font-weight: normal !important;
 }
